# spectator

./: .gitignore  LICENSE  README.md  cleanup_artifacts.sh  dump_spectator_for_review.sh  llama_spectator_tests.sh  llama_spectator_tests_v2.sh  pyproject.toml  run-private-llama.py  run-private-openapi.py  sitecustomize.py  spectator_tool_tests_v1.sh  spectator_tool_tests_v2_llama.sh  spectator_v1_overall_test.py  spectator_v1_tool_exec_test.py
config/: identity.json  policies.json  tools.yaml
docs/: ARCHITECTURE_FREEZE_v1.md  architecture.md  contracts.md  roadmap_steps.md  testing.md
llama_supervisor/: README.md  __init__.py  app.py  config.py  manager.py  models.py  ports.py  telemetry.py
scripts/: analyze_soak.py  capabilities_admin.py  smoke_run.py  soak_run.py  trace_tail_dump.py
tests/: test_admin_api.py  test_admin_introspect_api.py  test_admin_open_loops_api.py  test_admin_run_turn.py  test_admin_trace_parser.py  test_autopsy.py  test_capabilities.py  test_checkpoints.py  test_cli.py  test_condense.py  test_controller.py  test_e2e_smoke.py  test_embeddings.py  test_governor_tool_loop.py  test_history_prompt.py  test_http_get_tool.py  test_introspect_chunking.py  test_introspect_log_summarize.py  test_introspect_summarize_long_file.py  test_introspection.py  test_llama_backend_logging.py  test_llama_backend_prompts.py  test_llama_supervisor_manager.py  test_llama_supervisor_models.py  test_llama_supervisor_telemetry.py  test_memory_feedback.py  test_notes.py  test_overall_tool_execution.py  test_pipeline.py  test_pipeline_sanitizes_visible_output.py  (+18 more)
(+131 files in other folders)
