[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectator"
version = "0.1.0"
description = "Spectator runtime and tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Spectator Contributors" }]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]
admin = [
  "fastapi",
  "uvicorn",
  "jinja2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectator = ["prompts/**/*.txt", "admin/templates/*.html", "admin/static/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "admin: requires optional admin dependencies",
]
